link to bibliogaphy

--- a/site/index.html
+++ b/site/index.html
@@ -51,6 +51,15 @@
         </div>
         <div id="bibliography">
             <h3>Bibliography</h3>
+            <ul>
+                <li><a href="http://graphics.ethz.ch/publications/papers/paperBee11.php">
+                High-quality passive facial performance capture using
+                anchor frames</a> <i>Beeler, Thabo and Hahn, Fabian and Bradley, Derek and Bickel, Bernd and Beardsley, Paul and Gotsman, Craig and Sumner, Robert W. and Gross, Markus </i>
+
+                <li><a href="http://graphics.ethz.ch/publications/papers/paperBee10.php">
+                High-quality single-shot capture of facial geometry</a> <i>Beeler, Thabo and Bickel, Bernd and Beardsley, Paul and Sumner, Bob and Gross, Markus</i>
+            </ul>
+
         </div>
     </body>
 </html>
