Adding first video using html5

--- a/site/index.html
+++ b/site/index.html
@@ -46,8 +46,12 @@
                 <li><a href="./resources/pim380_report.pdf">Report</a>
             </ul>
         </div>
-        <div id="results">
+        <div id="results" align="center">
             <h3>Results</h3>
+            <video width="427" height="240" controls="controls" >
+              <source src="video/movie.ogg" type='video/ogg; codecs="theora, vorbis"'/>
+              <p>This is fallback content</p>
+            </video>
         </div>
         <div id="bibliography">
             <h3>Bibliography</h3>
