Updating site and Window.cpp comments

--- a/site/index.html
+++ b/site/index.html
@@ -52,6 +52,11 @@
               <source src="video/movie.ogg" type='video/ogg; codecs="theora, vorbis"'/>
               <p>This is fallback content</p>
             </video>
+            <video width="427" height="240" controls="controls" >
+              <source src="video/movie2.ogg" type='video/ogg; codecs="theora, vorbis"'/>
+              <p>This is fallback content</p>
+            </video>
+
         </div>
         <div id="bibliography">
             <h3>Bibliography</h3>
